# sensors_sensor

./: README.en.md  README.md  README_zh.md  bundle.json  ohos.build
frameworks/cj/src/: cj_sensor_ffi.cpp  cj_sensor_impl.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/ets/taihe/idl/: ohos.sensor.taihe
frameworks/js/napi/: BUILD.gn
frameworks/native/: BUILD.gn
frameworks/native/sensor/: BUILD.gn
frameworks/native/sensor/include/: i_sensor_client.h  i_sensor_service.h  my_file_descriptor_listener.h  sensor_agent_proxy.h  sensor_client_proxy.h  sensor_client_stub.h  sensor_data_channel.h  sensor_service_client.h  sensor_service_proxy copy.h  sensor_service_proxy.h
frameworks/native/sensor/src/: my_event_handler.cpp  my_file_descriptor_listener.cpp  sensor_agent_proxy.cpp  sensor_data_channel.cpp  sensor_service_client.cpp  sensor_service_proxy.cpp
frameworks/native/src/: sensor_service_client.cpp
interfaces/native/: BUILD.gn
interfaces/native/include/: sensor_agent_type.h
interfaces/native/src/: sensor_agent.cpp  sensor_algorithm.cpp
interfaces/native/test/: BUILD.gn
interfaces/native/test/unittest/: sensor_agent_test.cpp
interfaces/plugin/: BUILD.gn
interfaces/plugin/include/: sensor_js.h  sensor_napi_utils.h
interfaces/plugin/src/: sensor_js.cpp  sensor_napi_utils.cpp
interfaces/plugin/test/: ExampleJsunit.test_acc.js  ExampleJsunit.test_gyr.js  ExampleJsunit.test_light.js  ExampleJsunit.test_mag.js
interfaces/plugin/test/unittest/: BUILD.gn  ExampleJsunit.test.js  config.json  sensor_js_test.cpp
sa_profile/: 3601.xml  BUILD.gn
services/: BUILD.gn
services/hdi_connection/adapter/src/: hdi_connection.cpp
services/hdi_connection/interface/src/: sensor_hdi_connection.cpp
services/include/: sensor_power_policy.h
services/sensor/: BUILD.gn
services/sensor/include/: client_info.h  fifo_cache_data.h  flush_info_record.h  sensor_convert.h  sensor_data_processer.h  sensor_dump.h  sensor_manager.h  sensor_service.h  sensor_service_impl.h  sensor_service_stub.h
services/sensor/src/: client_info.cpp  flush_info_record.cpp  sensor_client_stub.cpp  sensor_convert.cpp  sensor_data_processer.cpp  sensor_dump.cpp  sensor_manager.cpp  sensor_service.cpp  sensor_service_impl.cpp  sensor_service_stub.cpp  sensor_suspend_policy.cpp
services/sensor/test/unittest/phone/: BUILD.gn  sensor_data_processer_test.cpp  sensor_proxy_test.cpp  sensor_service_impl_test.cpp
services/src/: sensor_power_policy.cpp  sensor_service.cpp
test/fuzztest/interfaces/cjsensor_fuzzer/: BUILD.gn
test/fuzztest/interfaces/getactivesensorinfos_fuzzer/: BUILD.gn
test/fuzztest/interfaces/getsensorlistbydeviceproxy_fuzzer/: BUILD.gn
test/fuzztest/interfaces/register_fuzzer/: BUILD.gn
test/fuzztest/interfaces/resetsensors_fuzzer/: BUILD.gn
test/fuzztest/interfaces/resumesensors_fuzzer/: BUILD.gn
test/fuzztest/interfaces/sensoragent_fuzzer/: BUILD.gn
test/fuzztest/interfaces/sensoragentenhanced_fuzzer/: BUILD.gn
test/fuzztest/interfaces/setdevicestatus_fuzzer/: BUILD.gn
test/fuzztest/interfaces/suspendsensors_fuzzer/: BUILD.gn
test/fuzztest/interfaces/unregister_fuzzer/: BUILD.gn
test/fuzztest/sensor_fuzzer/: BUILD.gn
test/fuzztest/services/blocksensordatabypidstub_fuzzer/: BUILD.gn
test/fuzztest/services/createdatachannelstub_fuzzer/: BUILD.gn
test/fuzztest/services/destroyclientremoteobjectstub_fuzzer/: BUILD.gn
test/fuzztest/services/disableactiveinfocbstub_fuzzer/: BUILD.gn
test/fuzztest/services/enableactiveinfocbstub_fuzzer/: BUILD.gn
test/fuzztest/services/getactiveinfoliststub_fuzzer/: BUILD.gn
test/fuzztest/services/getallsensorsstub_fuzzer/: BUILD.gn
test/fuzztest/services/getsensorlistbydevicestub_fuzzer/: BUILD.gn
test/fuzztest/services/resetsensorsstub_fuzzer/: BUILD.gn
test/fuzztest/services/resumesensorsstub_fuzzer/: BUILD.gn
test/fuzztest/services/sensordisablestub_fuzzer/: BUILD.gn
utils/: BUILD.gn
utils/common/src/: sensor_basic_data_channel.cpp
utils/include/: app_thread_info.h  dmd_report.h  permission_util.h  report_data_callback.h  sensor.h  sensor_basic_data_channel.h  sensor_channel_info.h  sensors_errors.h  sensors_log_domain.h
utils/src/: dmd_report.cpp  miscdevice_common.cpp  permission_util.cpp  report_data_callback.cpp  sensor.cpp  sensor_channel_info.cpp
(+23 files in other folders)
